adaptations and createDataBase